--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img class="logo" src="/images/logo.png" alt="" />
+        <img class="logo" src="images/logo.png" alt="" />
         <div class="links">
           <span class="icon">
             <span></span>
@@ -146,7 +146,7 @@
           </div>
           <div class="col">
             <div class="image image-column">
-              <img src="/images/image2.jpg" alt="" />
+              <img src="images/image2.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
         <p>If you do it right, it will last forever.</p>
         <div class="portfolio-content">
           <div class="card">
-            <img src="/images/port1.jpg" alt="" />
+            <img src="images/port1.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -170,7 +170,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/port1.jpg" alt="" />
+            <img src="images/port1.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/images/port1.jpg" alt="" />
+            <img src="images/port1.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -201,7 +201,7 @@
         <p>Less is more Work.</p>
         <div class="about-content">
           <div class="image">
-            <img src="/images/about.PNG" alt="" />
+            <img src="images/about.PNG" alt="" />
           </div>
           <div class="text">
             <p>
